i18n/ja/docusaurus-plugin-content-docs/version-1.6/tutorial/manage-rate-plans/manage-rate-plans.md
---
title: "料金プランの設定"
slug: "manage-rate-plans"
excerpt: ""
hidden: false
createdAt: "Wed Jan 11 2023 03:13:15 GMT+0000 (Coordinated Universal Time)"
updatedAt: "Fri Dec 08 2023 02:28:54 GMT+0000 (Coordinated Universal Time)"
---
## SaaSus Platformを利用した、料金設定（プライシング）、利用量計測（メータリング）、請求（ビリング）の第一歩

### SaaSus 開発コンソール を使った料金プランの作成

では、SaaSus PlatformのSaaSus 開発コンソールにログインし、料金プランの設定を行います。

SaaSus Platformでは、サブスクリプション型および従量課金のモデルに対応した料金プランの作成が可能です。

たとえば、今回はこのような料金プランを作成してみましょう。

- Free プラン
  - コメント数 Max 10
- Basic プラン
  - 固定料金 500円
  - コメント数 従量課金
    - 10コメントまで、 500円
    - 11コメント〜50コメントまで、 1000円 
    - Max 100コメントまで、 1500円

| プラン        |     基本料金 | コメント数                                                                             |
| :--------- | -------: | :-------------------------------------------------------------------------------- |
| Free       |          | 10                                                                                |
| Basic      |    500 円 | 従量課金<br />　 500 円:10コメントまで<br />　1000 円:11コメント〜50コメント<br />　1500 円:51コメント〜　　最大 100コメントまで |

SaaSus Platformでこのような料金プランを定義するためには、

計測単位

・利用量を計測し、課金をする単位

機能メニュー

・計測単位を組み合わせて機能として提供する単位

料金プラン

・テナントに紐付けるプラン単位

という単位で作成します。

たとえば、

- Basic プラン
  - 固定料金 500円
  - コメント数 従量課金
    - 10コメントまで、 500円
    - 11コメント〜50コメントまで、 1000円
    - 51コメント〜 100コメントまで、 1500円

を設定する場合には、

計測単位は

- Basic 固定ユニット 500円
- コメント数 段階的使用量ユニット
  - 10コメントまで、 固定金額 500円
  - 11コメント〜50コメントまで、 固定金額 1000円
  - 51コメント〜 100コメントまで、 固定金額 1500円

という３つのユニットを作成し、上限を100に設定します。

機能メニューは

- Basic 機能メニュー
  - 上記３つの計測単位を入れる

料金プランは

- Basic プラン
  - Basic 機能メニュー を入れる

というように作成します。

では、Free プラン以外の料金プランも作成してみましょう。

今回作成する、計測単位、機能メニュー、料金プランは以下になります、最後に作成動画で準備しておりますので詳しくは動画をご覧ください。

[計測単位・機能メニュー・料金プランの設定の設定内容(画像)はこちらを参照](./setting-measurement-units-function-menus-and-price-plans) 

#### 計測単位

##### 基本料金設定

計測単位：固定ユニット計測単位

| 計測単位名           | 計測単位の表示名          | 計測単位の説明           | 金額    | 繰り返しの期間 | 通貨  |
| :-------------- | :---------------- | :---------------- | :---- | :------ | :-- |
| basic_base      | Basicプラン基本料金      | Basicプラン基本料金      | 500   | 月       | JPY |

##### Free プラン

計測単位：使用量ユニット計測単位

| 計測単位名        | 計測単位の表示名     | 計測単位の説明      | 対象メーター名       | 単位使用量あたりの金額 | 上限 | 通貨  |
| :----------- | :----------- | :----------- | :------------ | :---------- | :- | :-- |
| free_comment | Freeプランコメント数 | Freeプランコメント数 | comment_count | 0           | 10 | JPY |

##### Basic プラン

計測単位：段階ユニット計測単位

| 計測単位名         | 計測単位の表示名       | 計測単位の説明        | 対象メーター名       | 通貨  | 範囲    |  上限 |
| :------------ | :------------- | :------------- | :------------ | :-- | :---- | --: |
| basic_comment | Basicプランのコメント数 | Basicプランのコメント数 | comment_count | JPY | 以下表参照 | 100 |

範囲

| 以上 | 以下 | 単位金額 | 固定金額 |
| -: | -: | ---: | ---: |
|  0 |  10 |    0 |  500 |
| 11 |  50 |    0 | 1000 |
| 51 | 100 |    0 | 1500 |

#### 機能メニュー

| 機能メニュー名         | 機能メニューの表示名          | 機能メニューの説明           | 計測単位                                                            |
| :-------------- | :------------------ | :------------------ | :-------------------------------------------------------------- |
| free_menu       | Freeプラン基本メニュー       | Freeプラン基本メニュー       | Freeプランユーザー数<br />Freeプランコメント数                                    |
| basic_menu      | Basicプラン基本メニュー      | Basicプラン基本メニュー      | Basicプラン基本料金<br />Basicプランユーザー数<br />Basicプランのコメント数                 |

#### 料金プラン

| 料金プラン名        | 料金プランの表示名     | 料金プランの説明      | 機能メニュー              |
| :------------ | :------------ | :------------ | :------------------ |
| Freeプラン       | Freeプラン       | Freeプラン       | Freeプラン基本メニュー       |
| Basicプラン      | Basicプラン      | Basicプラン      | Basicプラン基本メニュー      |

<iframe
  className="embedly-embed"
  src="https://www.youtube.com/embed/deSkPJ-zTgw?start=257&feature=oembed"
  width="854"
  height="480"
  scrolling="no"
  title="YouTube embed"
  frameborder="0"
  allow="autoplay; fullscreen"
  allowfullscreen="true">
</iframe>

### テナントへの料金プランの適用

SaaS 運用コンソールにログインし、「料金プラン設定」をクリックします。

![](/ja/img/tutorial/manage-rate-plans/manage-rate-plans-02.png)

各テナントのプラン設定をクリックし、料金プランを変更します。

テナントサンプルその１は無料プランを、サンプルアプリテナント２はベーシックプランを設定してみましょう。

![](/ja/img/tutorial/manage-rate-plans/manage-rate-plans-03.png)

これで、テナントに紐付いた料金プランが変更されます。Stripeと連携している場合は、Stripe側に顧客情報が作成され、サブスクリプションも作成されます。

![](/ja/img/tutorial/manage-rate-plans/manage-rate-plans-04.png)

では、ここまで設定した、料金設定（プライシング）、利用量計測（メータリング）の情報を活かして、アプリケーションに認可処理の一歩目を実装してみましょう。
