i18n/ja/docusaurus-plugin-content-docs/version-1.11/tutorial/manage-rate-plans/manage-rate-plans.md
---
title: "料金プランの管理"
slug: "manage-rate-plans"
excerpt: ""
hidden: false
createdAt: "Wed Jan 11 2023 03:13:15 GMT+0000 (Coordinated Universal Time)"
updatedAt: "Fri Dec 08 2023 02:28:54 GMT+0000 (Coordinated Universal Time)"
---
## SaaSus Platformを利用した、料金設定（プライシング）、利用量計測（メータリング）、請求（ビリング）の第一歩

### SaaSus 開発コンソール を使った料金プランの作成

では、SaaSus PlatformのSaaSus 開発コンソールにログインし、料金プランの設定を行います。

SaaSus Platformでは、サブスクリプション型および従量課金のモデルに対応した料金プランの作成が可能です。

たとえば、今回はこのような料金プランを作成してみましょう。

- Free プラン
  - ユーザー数 Max 2
  - コメント数 Max 10
- Basic プラン
  - 固定料金 500円
  - ユーザー数 Max 5
  - コメント数 従量課金
    - 10コメントまで、 500円
    - 11コメント〜50コメントまで、 1000円 
    - Max 100コメントまで、 1500円
- Advanced プラン
  - 固定料金 3,000円
  - ユーザー数 Max 10
  - コメント数 従量課金
    - 10コメントまで、 1コメントあたり 5円
    - 11コメント〜100コメントまで、 1コメントあたり 2円
    - 101コメント〜 1コメントあたり 1円
- Enterprise プラン
  - 固定料金 50,000円
  - ユーザー数 Free
  - コメント数 Free

| プラン        |     基本料金 | ユーザー数(MAX) | コメント数                                                                             |
| :--------- | -------: | ---------: | :-------------------------------------------------------------------------------- |
| Free       |          |        2 人 | 10                                                                                |
| Basic      |    500 円 |        5 人 | 従量課金<br />　５００ 円:10コメントまで<br />　1000 円:11コメント〜50コメント<br />　1500 円:51コメント〜　　最大 100コメントまで |
| Advanced   |  3,000 円 |       10 人 | 従量課金(１コメントあたり)<br />　5 円:0〜10コメント<br />　2円: 11〜100コメント<br />　1 円: 101コメント〜              |
| Enterprise | 50,000 円 |        無制限 | 無制限                                                                               |

※今回はチュートリアルのため、複雑な料金プランになっていますが、深い理由がない場合はこのような複雑な料金プラン設定は行わないでください。  
SaaSの利用料は原価をベースに考えるのではなく、お客様がどれくらいの価値を享受できるかをベースに考えるべきです。  
そのため、複雑な料金設定はお客様に複雑な計算と予測を強いることになり、SaaSを使うことでお客様の負担を減らす一方で、料金計算や予測に対する負担を与えることになります。  
そのため、なるべくシンプルでわかりやすい料金プランを作成するべきです。

SaaSus Platformでこのような料金プランを定義するためには、

計測単位

・利用量を計測し、課金をする単位

機能メニュー

・計測単位を組み合わせて機能として提供する単位

料金プラン

・テナントに紐付けるプラン単位

という単位で作成します。

たとえば、

- Advanced プラン
  - 固定料金 3,000円
  - ユーザー数 Max 10
  - コメント数 従量課金
    - 10コメントまで、 1コメントあたり 5円
    - 11コメント〜100コメントまで、 1コメントあたり 2円
    - 101コメント〜 1コメントあたり 1円

を設定する場合には、

計測単位は

- Advanced 固定ユニット 3,000円
- ユーザー数 Max10 使用量ユニット 0円
- コメント数 段階的使用量ユニット
  - 10コメントまで、 1コメントあたり 5円
  - 11コメント〜100コメントまで、 1コメントあたり 2円
  - 101コメント〜 1コメントあたり 1円

という３つのユニットを作成し、

機能メニューは

- Advenced 機能メニュー
  - 上記３つの計測単位を入れる

料金プランは

- Advenced プラン
  - Advenced 機能メニュー を入れる

というように作成します。

では、Advenced プラン以外の料金プランも作成してみましょう！  
今回作成する、計測単位、機能メニュー、料金プランは以下になります、最後に作成動画で準備しておりますので詳しくは動画をご覧ください。

[計測単位・機能メニュー・料金プランの設定の設定内容(画像)はこちらを参照](./setting-measurement-units-function-menus-and-price-plans) 

※ 今回チュートリアルを進める上で必要なプランは **Free プラン**、**Basic プラン**のみになります、Advenced プラン、Enterprise プランに関しては他設定できる例として記載しております。

#### 計測単位

##### 基本料金設定

計測単位：固定ユニット計測単位

| 計測単位名           | 計測単位の表示名          | 計測単位の説明           | 金額    | 繰り返しの期間 | 通貨  |
| :-------------- | :---------------- | :---------------- | :---- | :------ | :-- |
| basic_base      | Basicプラン基本料金      | Basicプラン基本料金      | 500   | 月       | JPY |
| advanced_base   | Advancedプラン基本料金   | Advancedプラン基本料金   | 3000  | 月       | JPY |
| enterprise_base | Enterpriseプラン基本料金 | Enterpriseプラン基本料金 | 50000 | 月       | JPY |

##### Free プラン

計測単位：使用量ユニット計測単位

| 計測単位名        | 計測単位の表示名     | 計測単位の説明      | 対象メーター名       | 単位使用量あたりの金額 | 上限 | 通貨  |
| :----------- | :----------- | :----------- | :------------ | :---------- | :- | :-- |
| free_user    | Freeプランユーザー数 | Freeプランユーザー数 | user_count    | 0           | 2  | JPY |
| free_comment | Freeプランコメント数 | Freeプランコメント数 | comment_count | 0           | 10 | JPY |

##### Basic プラン

計測単位：使用量ユニット計測単位

| 計測単位名      | 計測単位の表示名      | 計測単位の説明       | 対象メーター名    | 単位使用量あたりの金額 | 上限 | 通貨  |
| :--------- | :------------ | :------------ | :--------- | :---------- | :- | :-- |
| basic_user | Basicプランユーザー数 | Basicプランユーザー数 | user_count | 0           | 5  | JPY |

計測単位：段階ユニット計測単位

| 計測単位名         | 計測単位の表示名       | 計測単位の説明        | 対象メーター名       | 通貨  | 範囲    |  上限 |
| :------------ | :------------- | :------------- | :------------ | :-- | :---- | --: |
| basic_comment | Basicプランのコメント数 | Basicプランのコメント数 | comment_count | JPY | 以下表参照 | 100 |

範囲

| 以上 | 以下 | 単位金額 | 固定金額 |
| -: | -: | ---: | ---: |
|  0 | 10 |    0 |  500 |
| 11 | 50 |    0 | 1000 |
| 51 |    |    0 | 1500 |

##### Advenced プラン

計測単位：使用量ユニット計測単位

| 計測単位名         | 計測単位の表示名          | 計測単位の説明           | 対象メーター名    | 単位使用量あたりの金額 | 上限 | 通貨  |
| :------------ | :---------------- | :---------------- | :--------- | :---------- | :- | :-- |
| advanced_user | Advancedプランのユーザー数 | Advancedプランのユーザー数 | user_count | 0           | 10 | JPY |

計測単位：段階的使用量ユニット計測単位

| 計測単位名            | 計測単位の表示名          | 計測単位の説明           | 対象メーター名       | 通貨  | 範囲    | 上限 |
| :--------------- | :---------------- | :---------------- | :------------ | :-- | :---- | -: |
| advanced_comment | Advancedプランのコメント数 | Advancedプランのコメント数 | comment_count | JPY | 以下表参照 |  0 |

|  以上 |  以下 | 単位金額 | 固定金額 |
| --: | --: | ---: | ---: |
|   0 |  10 |    5 |    0 |
|  11 | 100 |    2 |    0 |
| 101 |     |    1 |    0 |

##### Enterprise プラン

計測単位：使用量ユニット計測単位

| 計測単位名              | 計測単位の表示名            | 計測単位の説明             | 対象メーター名      | 単位使用量あたりの金額 | 上限 | 通貨  |
| :----------------- | :------------------ | :------------------ | :----------- | :---------- | :- | :-- |
| enterprise_user    | Enterpriseプランのユーザー数 | Enterpriseプランのユーザー数 | user_count   | 0           | 0  | JPY |
| enterprise_comment | Enterpriseプランコメント数  | Enterpriseプランコメント数  | user_comment | 0           | 0  | JPY |

#### 機能メニュー

| 機能メニュー名         | 機能メニューの表示名          | 機能メニューの説明           | 計測単位                                                            |
| :-------------- | :------------------ | :------------------ | :-------------------------------------------------------------- |
| free_menu       | Freeプラン基本メニュー       | Freeプラン基本メニュー       | Freeプランユーザー数<br />Freeプランコメント数                                    |
| basic_menu      | Basicプラン基本メニュー      | Basicプラン基本メニュー      | Basicプラン基本料金<br />Basicプランユーザー数<br />Basicプランのコメント数                 |
| advanced_menu   | Advancedプラン基本メニュー   | Advancedプラン基本メニュー   | Advancedプラン基本料金<br />Advancedプランのユーザー数<br />Advancedプランのコメント数       |
| enterprise_menu | Enterpriseプラン基本メニュー | Enterpriseプラン基本メニュー | Enterpriseプラン基本料金<br />Enterpriseプランのユーザー数<br />Enterpriseプランのコメント数 |

#### 料金プラン

| 料金プラン名        | 料金プランの表示名     | 料金プランの説明      | 機能メニュー              |
| :------------ | :------------ | :------------ | :------------------ |
| Freeプラン       | Freeプラン       | Freeプラン       | Freeプラン基本メニュー       |
| Basicプラン      | Basicプラン      | Basicプラン      | Basicプラン基本メニュー      |
| Advancedプラン   | Advancedプラン   | Advancedプラン   | Advancedプラン基本メニュー   |
| Enterpriseプラン | Enterpriseプラン | Enterpriseプラン | Enterpriseプラン基本メニュー |

<iframe
  className="embedly-embed"
  src="https://www.youtube.com/embed/deSkPJ-zTgw?start=257&feature=oembed"
  width="854"
  height="480"
  scrolling="no"
  title="YouTube embed"
  frameborder="0"
  allow="autoplay; fullscreen"
  allowfullscreen="true">
</iframe>



### SaaSus 開発コンソール を使った請求との紐付け

次に請求の設定を行います。

これらのテナントごとの料金プランや使用量の情報をベースに、自前で請求処理を実装することももちろん可能です。

しかし、すでに世の中には請求を簡単に行うためのSaaSが存在しています。  
SaaSus Platformを利用して楽にSaaSを構築、運用を行うのと同様に、便利なSaaSを積極的に使うことにより、構築、運用の労力をSaaSにオフロードすることができます。  
そのため、今回は課金SaaSの一つであるStripeと連携をしてみます。

　**※Stripe連携を行わない場合は、こちらの作業はスキップしていただいてOKです**

サイドメニューから、「外部連携」をクリックします

Stripeのシークレットキーを入力し、保存ボタンをクリックします。

![](/ja/img/tutorial/manage-rate-plans/manage-rate-plans-01.png)

これでStripeとの連携ができました。  
上記で作成した料金プランが Stripeへ連携されていると思います。

また、料金プランが関わるオペレーションを行うと、Stripeに連携されるようになります。

ここまでで、料金プランの設定が終わりました。

では、この料金プランを各テナントに適用してみましょう。

### テナントへの料金プランの適用

SaaS 運用コンソールにログインし、「料金プラン設定」をクリックします。

![](/ja/img/tutorial/manage-rate-plans/manage-rate-plans-02.png)

各テナントのプラン設定をクリックし、料金プランを変更します。

テナントサンプルその１は無料プランを、サンプルアプリテナント２はベーシックプランを設定してみましょう。

![](/ja/img/tutorial/manage-rate-plans/manage-rate-plans-03.png)

これで、テナントに紐付いた料金プランが変更されます。Stripeと連携している場合は、Stripe側に顧客情報が作成され、サブスクリプションも作成されます。

![](/ja/img/tutorial/manage-rate-plans/manage-rate-plans-04.png)

では、ここまで設定した、料金設定（プライシング）、利用量計測（メータリング）の情報を活かして、アプリケーションに認可処理の一歩目を実装してみましょう。
